# partisan

./: README.md  setup.cfg
dev/: sandbox.ipynb
src/partisan/: partisan.py
