[metadata]
name = partisan
version = 0.0.1
author = Isaac Langley
author_email = langley.isaac5@gmail.com
description = Partial dependence plots for scikit-learn models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/langleyi/partisan
project_urls =
    Bug Tracker = https://github.com/langleyi/partisan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src